--- a/pages/project1.html
+++ b/pages/project1.html
@@ -20,12 +20,12 @@
                     <div class="logo-text">AppCraft</div>
                 </a>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="pages/project1.html">Project 1</a></li>
-                    <li><a href="pages/project2.html">Project 2</a></li>
-                    <li><a href="pages/project3.html">Project 3</a></li>
-                    <li><a href="pages/about.html">About Us</a></li>
-                    <li><a href="pages/contact.html">Contact</a></li>
+                    <li><a href="../pages/home.html" class="active">Home</a></li>
+                    <li><a href="../pages/project1.html">Project 1</a></li>
+                    <li><a href="../pages/project2.html">Project 2</a></li>
+                    <li><a href="../pages/project3.html">Project 3</a></li>
+                    <li><a href="../pages/about.html">About Us</a></li>
+                    <li><a href="../pages/contact.html">Contact</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
@@ -54,7 +54,7 @@
         
         <div class="app-preview">
             <h2>Live Demo</h2>
-            <iframe src="https://codepen.io/trending" title="Task Manager Demo"></iframe>
+            <iframe src="../media/ibrahimovic.mp4" title="Task Manager Demo"></iframe>
         </div>
         
         <div class="project-description">
